# routes/recipes.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const router = express.Router();
+
+const recipesController = require('../controllers/recipes');
+
+router.get('/', recipesController.getAllRecipes);
+router.get('/:id', recipesController.getSingleRecipe);
+router.post('/', recipesController.createRecipe);
+router.put('/:id', recipesController.updateRecipe);
+router.delete('/:id', recipesController.deleteRecipe);
+
+module.exports = router;
